successfully connect to mongodb

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGODB_URL = mongodb+srv://Assignent-5-backend-event360:TMBDdfPGjZnOIlHX@cluster0.clwxeiy.mongodb.net/?retryWrites=true&w=majority
+MONGODB_URI = mongodb+srv://Assignent-5-backend-event360:TMBDdfPGjZnOIlHX@cluster0.clwxeiy.mongodb.net/?retryWrites=true&w=majority
 PORT = 8080
 NODE_ENV = development
 
