--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,30 @@
+# Node.js
+node_modules/
 
-# dependencies
-node_modules
-/node_modules
+# Dependency directories
+/*/node_modules/
+/*/*/node_modules/
+/*/*/package-lock.json
+/*/*/yarn.lock
 
+# Optional npm cache directory
+.npm
 
-
-/.pnp
-.pnp.js
-
-# testing
-/coverage
-
-# production
-/build
-
-# misc
-.DS_Store
+# dotenv environment variables file
 .env
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
 
+# OS generated files
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+Icon?
+ehthumbs.db
+Thumbs.db
+
+# User-specific files
+*.log
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
